# api-coverage-by-swagger

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  Taskfile.yml  architecture-review.md  conftest.py  docker-compose.yml  index.html  pyproject.toml  report.html
.agents/skills/test-quality-review/: SKILL.md
.agents/skills/unit-test-quality-review/: SKILL.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-11T18-53-25-163Z.yml  page-2026-06-11T18-56-48-189Z.yml  page-2026-06-11T18-59-33-753Z.yml  page-2026-06-11T19-23-08-426Z.yml  page-2026-06-11T19-29-05-429Z.yml  page-2026-06-11T19-30-36-267Z.yml  page-2026-06-11T19-31-53-748Z.yml  page-2026-06-11T19-35-38-769Z.yml  page-2026-06-11T19-36-59-641Z.yml  page-2026-06-11T19-38-35-885Z.yml  page-2026-06-11T19-39-24-998Z.yml
e2e-book-club/: README.md
e2e-book-club/framework/clients/http/: base_client.py
e2e-book-club/framework/clients/http/book_club/: auth_client.py  clubs_client.py  docs_client.py  users_client.py
e2e-book-club/framework/fixtures/: __init__.py
e2e-book-club/framework/fixtures/http/: __init__.py  base.py  book_club_service.py
e2e-book-club/framework/settings/: base_settings.py
e2e-book-club/internal/clients/http/book_club/: __init__.py
e2e-book-club/tests/: conftest.py
e2e-book-club/tests/http/book_club/auth/: test_post_api_v1_auth_logout.py  test_post_api_v1_auth_token.py  test_post_api_v1_auth_token_refresh.py
e2e-book-club/tests/http/book_club/clubs/: test_delete_api_v1_clubs_id.py  test_delete_api_v1_clubs_id__members_me.py  test_delete_api_v1_clubs_reviews_id.py  test_get_api_v1_clubs.py  test_get_api_v1_clubs_id.py  test_get_api_v1_clubs_reviews.py  test_get_api_v1_clubs_reviews_id.py  test_patch_api_v1_clubs_id.py  test_patch_api_v1_clubs_reviews_id.py  test_post_api_v1_clubs.py  test_post_api_v1_clubs_id__members_me.py  test_post_api_v1_clubs_reviews.py  test_put_api_v1_clubs_id.py  test_put_api_v1_clubs_reviews_id.py
e2e-book-club/tests/http/book_club/docs/: test_get_api_v1_docs_schema.py
e2e-book-club/tests/http/book_club/users/: test_delete_api_v1_users_me.py  test_get_api_v1_users_me.py  test_patch_api_v1_users_me.py  test_post_api_v1_users_register.py  (+1 more)
src/: main.py  models.py
src/core/: coverage.py  loader.py  matcher.py  parser.py  utils.py
src/routers/: report.py  setup.py
src/services/: coverage.py
src/static/css/: base.css  coverage.css  url_form.css
src/static/js/: coverage.js  url_form.js
src/templates/: base.html  coverage.html  report_export.html  url_form.html
src/tests/: conftest.py  test_parser.py
src/unit_tests/: test_coverage.py  test_loader.py  test_routers.py
tests/: test_parser.py  test_utils.py
(+5 files in other folders)
