[tool.poetry]
name = "proxy-coverage"
version = "0.1.0"
description = ""
authors = ["John Makarov <johnmakarovqa@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.8"}
uvicorn = "^0.34.0"
fastapi-proxy-lib = {extras = ["standard"], version = "^0.2.0"}
jinja2 = "^3.1.5"
pytest = "^8.3.4"
httpx = "^0.28.1"
allure-pytest = "^2.14.3"
faker = "^37.4.0"


[tool.poetry.group.dev.dependencies]
pytest-deadfixtures = "^2.2.1"
restcodegen = "^1.1.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
