[tool.poetry]
name = "proxy-coverage"
version = "0.1.0"
description = ""
authors = [""]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.8"}
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
httpx = "^0.28.1"
prance = {extras = ["osv"], version = "^25.4.8.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.2.1"
pytest-deadfixtures = "^2.2.1"
allure-pytest = "^2.14.3"
faker = "^37.4.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
