[tool.poetry]
name = "proxy-coverage"
version = "0.1.0"
description = ""
authors = [""]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.8"}
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
httpx = "^0.28.1"
prance = {extras = ["osv"], version = "^25.4.8.0"}
e2efast = "^1.0.1"
email-validator = ">=2.0.0"
structlog = "^25.1.0"
curlify2 = "^2.0.0"
pytest-xdist = "^3.8.0"
mypy = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.2.1"
pytest-deadfixtures = "^2.2.1"
allure-pytest = "^2.14.3"
faker = "^37.4.0"
pytest-asyncio = "^1.4.0"
ruff = "^0.15.17"

[tool.ruff]
exclude = [
    "e2e-book-club/internal/",
    "e2e-book-club/framework/fixtures/http/book_club_service.py",
]

[tool.mypy]
namespace_packages = true
exclude = [
    "e2e-book-club/internal/",
]

[[tool.mypy.overrides]]
module = ["curlify2", "e2efast.*", "prance.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "e2e-book-club.internal.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "framework.fixtures.http.book_club_service"
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src", "e2e-book-club"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
